--- a/hyprland.conf
+++ b/hyprland.conf
@@ -19,9 +19,7 @@ monitor = eDP-1, 1920x1080@60, auto, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = bash ~/.config/hypr/speedup.sh
-#exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = bash ~/.config/hypr/start.sh
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -41,7 +39,7 @@ input {
 
     touchpad {
         natural_scroll = no
-	scroll_factor = 0.5
+	    scroll_factor = 0.5
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -52,9 +50,9 @@ general {
 
     gaps_in = 3
     gaps_out = 10
-    border_size = 3
+    border_size = 4
     resize_on_border = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(08605Fee) rgba(F8B500ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -64,15 +62,13 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    blur {
+        enabled = false
+    }
 }
 
 animations {
@@ -81,7 +77,6 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -128,7 +123,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -169,6 +164,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Example volume button that allows press and hold, volume limited to 150%
+$vol_updater = ~/.config/eww/scripts/update-vol
+binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+binde=, XF86AudioRaiseVolume, exec, $vol_updater
+# Example volume button that will activate even while an input inhibitor is active
+binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+binde=, XF86AudioLowerVolume, exec, $vol_updater
+
+# brightness
+$brightness_updater = ~/.config/eww/scripts/update-brightness
+binde=,XF86MonBrightnessDown,exec,brightnessctl set 3%-
+binde=,XF86MonBrightnessDown, exec, $brightness_updater
+binde=,XF86MonBrightnessUp,exec,brightnessctl set +3%
+binde=,XF86MonBrightnessUp, exec, $brightness_updater
 
 # Split left/right
 #bind = $mainMod SHIFT, left, resizeactive, 50%
