defer eww scripts to the end, add firefox profile switcher

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -49,7 +49,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 3
-    gaps_out = 10
+    gaps_out = 5
     border_size = 4
     resize_on_border = 1
     col.active_border = rgba(08605Fee) rgba(F8B500ee) 45deg
@@ -112,7 +112,6 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -179,7 +178,7 @@ binde=,XF86MonBrightnessDown,exec,brightnessctl set 3%-
 binde=,XF86MonBrightnessDown, exec, $brightness_updater
 binde=,XF86MonBrightnessUp,exec,brightnessctl set +3%
 binde=,XF86MonBrightnessUp, exec, $brightness_updater
-
+bindr= ,SUPER_L, exec, eww open --toggle powermenu
 # Split left/right
 #bind = $mainMod SHIFT, left, resizeactive, 50%
 
@@ -187,6 +186,9 @@ binde=,XF86MonBrightnessUp, exec, $brightness_updater
 bind = $mainMod, S, exec, rofi -show drun -show-icons
 # Cliphist
 #bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+# Firefox Profile Switcher
+# $firefox_switcher = rofi -show profile-switcher -modi "profile-switcher:~/.config/rofi/scripts/rofi-ffp.sh"
+bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:~/.config/rofi/scripts/rofi-ffp.sh"
 
 bind = ALT, Tab, cyclenext
 bind = ALT, Tab, bringactivetotop
