add firefox PiP rules

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -164,6 +164,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bind = ALT, Tab, cyclenext
+bind = ALT, Tab, bringactivetotop
+
 # Example volume button that allows press and hold, volume limited to 150%
 $vol_updater = ~/.config/eww/scripts/update-vol
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
@@ -190,8 +193,19 @@ bind = $mainMod, S, exec, rofi -show drun -show-icons
 # $firefox_switcher = rofi -show profile-switcher -modi "profile-switcher:~/.config/rofi/scripts/rofi-ffp.sh"
 bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:~/.config/rofi/scripts/rofi-ffp.sh"
 
-bind = ALT, Tab, cyclenext
-bind = ALT, Tab, bringactivetotop
+# Picture-In-Picture mode Firefox
+windowrulev2 = float, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = pin, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = nofullscreenrequest, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = nomaximizerequest, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = move 66.7% 61.5%, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = noanim, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = keepaspectratio, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = bordersize 1, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = noshadow, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = nodim, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = noinitialfocus, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = bordercolor rgb(A0FFF9), class:(firefox), title:^(Firefox|Picture-in-Picture)$
 
 # SS
 bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
