decrease volume increase interval and set firefox PiP size

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -169,10 +169,10 @@ bind = ALT, Tab, bringactivetotop
 
 # Example volume button that allows press and hold, volume limited to 150%
 $vol_updater = ~/.config/eww/scripts/update-vol
-binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 3%+
 binde=, XF86AudioRaiseVolume, exec, $vol_updater
 # Example volume button that will activate even while an input inhibitor is active
-binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 binde=, XF86AudioLowerVolume, exec, $vol_updater
 
 # brightness
@@ -198,7 +198,8 @@ windowrulev2 = float, class:(firefox), title:^(Firefox|Picture-in-Picture)$
 windowrulev2 = pin, class:(firefox), title:^(Firefox|Picture-in-Picture)$
 windowrulev2 = nofullscreenrequest, class:(firefox), title:^(Firefox|Picture-in-Picture)$
 windowrulev2 = nomaximizerequest, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = move 66.7% 61.5%, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = move 64.6% 61.5%, class:(firefox), title:^(Firefox|Picture-in-Picture)$
+windowrulev2 = size 35% 33%, class:(firefox), title:^(Firefox|Picture-in-Picture)$
 windowrulev2 = noanim, class:(firefox), title:^(Firefox|Picture-in-Picture)$
 windowrulev2 = keepaspectratio, class:(firefox), title:^(Firefox|Picture-in-Picture)$
 windowrulev2 = bordersize 1, class:(firefox), title:^(Firefox|Picture-in-Picture)$
