enable natural scroll, speed up workspace transition, swap terminal and kill window commands

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -38,8 +38,8 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
-	    scroll_factor = 0.5
+        natural_scroll = yes
+	    scroll_factor = 0.3
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -82,7 +82,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 4, default
 }
 
 dwindle {
@@ -103,8 +103,8 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
+device:logitech-gaming-mouse-g402 {
+    sensitivity = -0.7
 }
 
 # Example windowrule v1
@@ -117,8 +117,8 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
-bind = $mainMod, C, killactive, 
+bind = $mainMod, C, exec, kitty
+bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating, 
@@ -190,7 +190,6 @@ bind = $mainMod, S, exec, rofi -show drun -show-icons
 # Cliphist
 #bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # Firefox Profile Switcher
-# $firefox_switcher = rofi -show profile-switcher -modi "profile-switcher:~/.config/rofi/scripts/rofi-ffp.sh"
 bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:~/.config/rofi/scripts/rofi-ffp.sh"
 
 # Picture-In-Picture mode Firefox
