Feat: Ctrl PrintScreen: for full window ss, disable speedup.sh, speedup animations

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -19,7 +19,7 @@ monitor = eDP-1, 1920x1080@60, auto, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = bash ~/.config/hypr/speedup.sh
+# exec-once = bash ~/.config/hypr/speedup.sh
 exec-once = bash ~/.config/hypr/start.sh
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -77,11 +77,11 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 4, myBezier
+    animation = windowsOut, 1, 4, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
+    animation = fade, 1, 6, default
     animation = workspaces, 1, 4, default
 }
 
@@ -209,17 +209,8 @@ windowrulev2 = bordercolor rgb(A0FFF9), class:(firefox), title:^(Firefox|Picture
 
 # SS
 bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
+bind = Ctrl, Print, exec, grim -g "0,0 1920x1080" - | swappy -f -
 
-# Resize (vim style)
-#binde = $mainMod SHIFT, H, resizeactive,-50 0
-#binde = $mainMod SHIFT, L, resizeactive,50 0
-#binde = $mainMod SHIFT, K, resizeactive,0 -50
-#binde = $mainMod SHIFT, J, resizeactive,0 50
-
-#binde = $mainMod SHIFT, left, resizeactive,-50 0
-#binde = $mainMod SHIFT, right, resizeactive,50 0
-#binde = $mainMod SHIFT, up, resizeactive,0 -50
-#binde = $mainMod SHIFT, down, resizeactive,0 50
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
@@ -229,8 +220,3 @@ bind = $mainMod CTRL, left, movewindow, l
 bind = $mainMod CTRL, right, movewindow, r
 bind = $mainMod CTRL, up, movewindow, u
 bind = $mainMod CTRL, down, movewindow, d
-
-#bind = $mainMod SHIFT, right, resizeactive, exact 50% 0%, movewindow, right
-#bind = $mainMod SHIFT, left, resizeactive, exact -50% 0%
-#bind = $mainMod SHIFT, up, resizeactive, exact 0% -50%
-#bind = $mainMod SHIFT, down, resizeactive, exact 0% 50%
