Powerbutton now toggles powermenu

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -167,6 +167,9 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = ALT, Tab, cyclenext
 bind = ALT, Tab, bringactivetotop
 
+# Handle power button
+bind = , XF86PowerOff, exec, ~/.config/eww/lib/open powermenu
+
 # Example volume button that allows press and hold, volume limited to 150%
 $vol_updater = ~/.config/eww/scripts/update-vol
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 3%+
