disable mouse accel

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -104,7 +104,12 @@ gestures {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:logitech-gaming-mouse-g402 {
-    sensitivity = -0.7
+    sensitivity = 0
+    accel_profile = flat
+}
+device:telink-rakk-magan-mouse {
+    sensitivity = 0
+    accel_profile = flat
 }
 
 # Example windowrule v1
