Feat: sleep and autolock

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -16,7 +16,6 @@ monitor = desc:XMI A24FAA-RG 4440220140443, 1920x1080@165, auto, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = bash ~/.config/hypr/speedup.sh
 exec-once = bash ~/.config/hypr/start.sh
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -59,12 +58,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    drop_shadow = yes
+    drop_shadow = false # disabled for perf
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
     blur {
-        enabled = false
+        enabled = false # disabled for perf
     }
 }
 
@@ -109,6 +108,11 @@ device {
     name = telink-rakk-magan-mouse
     sensitivity = 0
     accel_profile = flat
+}
+misc {
+    vfr = true # lowers framerate when idle
+    key_press_enables_dpms = true
+    mouse_move_enables_dpms = true #prevents accidental wake up
 }
 
 # Example windowrule v1     (deprecated)
@@ -173,6 +177,9 @@ bind = ALT, Tab, bringactivetotop
 
 # Handle power button
 bind = , XF86PowerOff, exec, ~/.config/eww/lib/open powermenu
+
+# Laptop lid
+# bindl=,switch:[Lid Switch],exec,swaylock
 
 # Example volume button that allows press and hold, volume limited to 150%
 $vol_updater = ~/.config/eww/scripts/update-vol
