--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,2 +1,5 @@
-preload = ~/wallpapers/shioriko.png
-wallpaper = eDP-1,~/wallpapers/shioriko.png
+preload = ~/wallpapers/nina-hanamiya-wallpaper-2K.png
+wallpaper = eDP-1,~/wallpapers/nina-hanamiya-wallpaper-2K.png
+wallpaper = HDMI-A-1,~/wallpapers/nina-hanamiya-wallpaper-2K.png
+
+
