split hyprland conf

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -11,14 +11,15 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1, 1920x1080@60, auto, 1
-monitor = desc:XMI A24FAA-RG 4440220140443, 1920x1080@165, auto, 1
+monitor = HDMI-A-1, 1920x1080@165, auto, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = bash ~/.config/hypr/start.sh
 # Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/binds.conf
+source = ~/.config/hypr/windowrules.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -41,26 +42,31 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+$primary_color = rgba(08605Fee)
+$inactive_bg = rgba(595959aa)
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 3
-    gaps_out = 5
+    gaps_out = 4
     border_size = 4
     resize_on_border = 1
-    col.active_border = rgba(08605Fee) rgba(F8B500ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
+    col.active_border = $primary_color rgba(F8B500ee) 45deg
+    col.inactive_border = $inactive_bg
     layout = dwindle
+}
+group {
+    groupbar {
+        col.active = $primary_color
+        col.inactive = $inactive_bg
+    }
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 10
+    rounding = 8
     drop_shadow = false # disabled for perf
-    shadow_range = 4
-    shadow_render_power = 3
+    # shadow_range = 4
+    # shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
     blur {
         enabled = false # disabled for perf
@@ -71,13 +77,12 @@ animations {
     enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 4, myBezier
     animation = windowsOut, 1, 4, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 6, default
+    animation = fade, 1, 7, default
     animation = workspaces, 1, 4, default
 }
 
@@ -110,127 +115,8 @@ device {
     accel_profile = flat
 }
 misc {
-    vfr = true # lowers framerate when idle
+    # vfr = true # lowers framerate when idle
     key_press_enables_dpms = true
     mouse_move_enables_dpms = true #prevents accidental wake up
 }
 
-# Example windowrule v1     (deprecated)
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, C, exec, kitty
-bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, nautilus
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, rofi -show drun
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-bind = ALT, Tab, cyclenext
-bind = ALT, Tab, bringactivetotop
-
-# Handle power button
-bind = , XF86PowerOff, exec, ~/.config/eww/lib/open powermenu
-
-# Laptop lid
-# bindl=,switch:[Lid Switch],exec,swaylock
-
-# Example volume button that allows press and hold, volume limited to 150%
-$vol_updater = ~/.config/eww/scripts/update-vol
-binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 3%+
-binde=, XF86AudioRaiseVolume, exec, $vol_updater
-# Example volume button that will activate even while an input inhibitor is active
-binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
-binde=, XF86AudioLowerVolume, exec, $vol_updater
-
-# brightness
-$brightness_updater = ~/.config/eww/scripts/update-brightness
-binde=,XF86MonBrightnessDown,exec,brightnessctl set 3%-
-binde=,XF86MonBrightnessDown, exec, $brightness_updater
-binde=,XF86MonBrightnessUp,exec,brightnessctl set +3%
-binde=,XF86MonBrightnessUp, exec, $brightness_updater
-bindr= ,SUPER_L, exec, eww open --toggle powermenu
-# Split left/right
-#bind = $mainMod SHIFT, left, resizeactive, 50%
-
-# Rofi Launcher
-bind = $mainMod, S, exec, rofi -show drun -show-icons
-# Cliphist
-#bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-# Firefox Profile Switcher
-bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:~/.config/rofi/scripts/rofi-ffp.sh"
-
-# Picture-In-Picture mode Firefox
-windowrulev2 = float, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = pin, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-# windowrulev2 = nofullscreenrequest, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-# windowrulev2 = nomaximizerequest, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = move 64.6% 61.5%, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = size 35% 33%, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = noanim, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = keepaspectratio, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = bordersize 1, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = noshadow, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = nodim, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = noinitialfocus, class:(firefox), title:^(Firefox|Picture-in-Picture)$
-windowrulev2 = bordercolor rgb(A0FFF9), class:(firefox), title:^(Firefox|Picture-in-Picture)$
-
-# SS
-bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
-bind = Ctrl, Print, exec, grim -g "0,0 1920x1080" - | swappy -f -
-
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, J, movewindow, d 
-
-bind = $mainMod CTRL, left, movewindow, l
-bind = $mainMod CTRL, right, movewindow, r
-bind = $mainMod CTRL, up, movewindow, u
-bind = $mainMod CTRL, down, movewindow, d
