--- a/hyprland.conf
+++ b/hyprland.conf
@@ -115,8 +115,8 @@ device {
     accel_profile = flat
 }
 misc {
-    # vfr = true # lowers framerate when idle
+    vfr = true # lowers framerate when idle
     key_press_enables_dpms = true
-    mouse_move_enables_dpms = true #prevents accidental wake up
+    mouse_move_enables_dpms = false #prevents accidental wake up
 }
 
