--- a/hyprland.conf
+++ b/hyprland.conf
@@ -53,9 +53,12 @@ general {
     col.active_border = $primary_color rgba(F8B500ee) 45deg
     col.inactive_border = $inactive_bg
     layout = dwindle
+    no_cursor_warps = true
 }
 group {
     groupbar {
+        # dont need
+        enabled = false
         col.active = $primary_color
         col.inactive = $inactive_bg
     }
