Fix: nm-applet not starting; Feat: toggle power menu w/ ALT+F4 or CTRL+ALT+DEL

--- a/binds.conf
+++ b/binds.conf
@@ -98,3 +98,7 @@ bind = $mainMod CTRL, left, movewindow, l
 bind = $mainMod CTRL, right, movewindow, r
 bind = $mainMod CTRL, up, movewindow, u
 bind = $mainMod CTRL, down, movewindow, d
+
+# Powermenu
+bind = CTRL+ALT, Delete, exec, ags -r "togglePowerMenu()"
+bind = ALT,F4, exec, ags -r "togglePowerMenu()"
