--- a/hyprland.conf
+++ b/hyprland.conf
@@ -17,11 +17,10 @@ monitor = ,highrr,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = bash ~/.config/hypr/start.sh
 # Source a file (multi-file configs)
 source = ~/.config/hypr/binds.conf
 source = ~/.config/hypr/windowrules.conf
-
+source = ~/.config/hypr/autostart.conf
 # Some default env vars.
 env = XCURSOR_SIZE,24
 
