Feat: autostart bluetooth applet

--- a/autostart.conf
+++ b/autostart.conf
@@ -9,7 +9,8 @@ exec-once = bash $gnomeAuthAgent
 
 # Network manager
 exec-once = nm-applet --indicator
-
+# Bluetooth
+exec-once = blueman-applet
 # Desktop Widgets
 exec-once = ags
 
