organize binds, start bluemantray

--- a/autostart.conf
+++ b/autostart.conf
@@ -11,6 +11,7 @@ exec-once = bash $gnomeAuthAgent
 exec-once = nm-applet --indicator
 # Bluetooth
 exec-once = blueman-applet
+exec-once = blueman-tray
 # Desktop Widgets
 exec-once = ags
 
