--- a/binds.conf
+++ b/binds.conf
@@ -57,9 +57,6 @@ bind = ALT, TAB, changegroupactive # when tabbed mode
 # Handle power button
 bind = , XF86PowerOff, exec, ~/.config/eww/lib/open powermenu
 
-# Laptop lid
-# bindl=,switch:[Lid Switch],exec,swaylock
-
 # Example volume button that allows press and hold, volume limited to 150%
 $vol_updater = ~/.config/eww/scripts/update-vol
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 3%+
@@ -74,7 +71,6 @@ binde=,XF86MonBrightnessDown,exec,brightnessctl set 3%-
 binde=,XF86MonBrightnessDown, exec, $brightness_updater
 binde=,XF86MonBrightnessUp,exec,brightnessctl set +3%
 binde=,XF86MonBrightnessUp, exec, $brightness_updater
-bindr= ,SUPER_L, exec, eww open --toggle powermenu
 # Split left/right
 #bind = $mainMod SHIFT, left, resizeactive, 50%
 
@@ -87,6 +83,7 @@ bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:
 
 # SS
 bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
+# TODO: change x,y and resolution based on active workspace
 bind = Ctrl, Print, exec, grim -g "0,0 1920x1080" - | swappy -f -
 
 bind = $mainMod SHIFT, H, movewindow, l
@@ -99,6 +96,9 @@ bind = $mainMod CTRL, right, movewindow, r
 bind = $mainMod CTRL, up, movewindow, u
 bind = $mainMod CTRL, down, movewindow, d
 
-# Powermenu
+# AGS
+bind = $mainMod CTRL, A, exec, ags -q
+bind = $mainMod CTRL, A, exec, sleep 1 && ags
+## Powermenu
 bind = CTRL+ALT, Delete, exec, ags -r "togglePowerMenu()"
 bind = ALT,F4, exec, ags -r "togglePowerMenu()"
