Feat: delay blueman-tray launch

--- a/autostart.conf
+++ b/autostart.conf
@@ -11,14 +11,13 @@ exec-once = bash $gnomeAuthAgent
 exec-once = nm-applet --indicator
 # Bluetooth
 exec-once = blueman-applet
-exec-once = blueman-tray
+exec-once = sleep 5 && blueman-tray
 # Desktop Widgets
 exec-once = ags
 
 # Clipboards
-exec-once = wl-paste --type text --watch cliphist store & #Stores only text
-exec-once = wl-paste --type image --watch cliphist store & #Stores only image data
+exec-once = wl-paste --type text --watch cliphist store #Stores only text
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
 # Auto sleep
 exec-once = hypridle
-
