Feat: task manager bind

--- a/binds.conf
+++ b/binds.conf
@@ -102,3 +102,6 @@ bind = $mainMod CTRL, A, exec, sleep 1 && ags
 ## Powermenu
 bind = CTRL+ALT, Delete, exec, ags -r "togglePowerMenu()"
 bind = ALT,F4, exec, ags -r "togglePowerMenu()"
+
+# Taskmgr
+bind = CTRL+SHIFT,ESCAPE, exec, gnome-system-monitor
