Move cursor under its own config

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -53,7 +53,9 @@ general {
     col.active_border = $primary_color rgba(F8B500ee) 45deg
     col.inactive_border = $inactive_bg
     layout = dwindle
-    no_cursor_warps = true
+}
+cursor {
+    no_warps = true
 }
 group {
     groupbar {
