Disable: reisen-restore, bind:Super+Shift+W: moveoutofgroup, adjust hypridle, window:vlc:idleinhibit, set monitor order for now

--- a/binds.conf
+++ b/binds.conf
@@ -14,6 +14,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod Shift, T, togglegroup, # grouped tabbed mode
 # Move focus with mainMod + arrow keys
+bind = $mainMod Shift, W, moveoutofgroup,
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
@@ -105,3 +106,4 @@ bind = ALT,F4, exec, ags -r "togglePowerMenu()"
 
 # Taskmgr
 bind = CTRL+SHIFT,ESCAPE, exec, gnome-system-monitor
+
