--- a/hypridle.conf
+++ b/hypridle.conf
@@ -1,10 +1,3 @@
-# listener {
-#     timeout = 30 # in seconds. 5mins.
-#     # command to run when timeout has passed.
-#     # on-timeout = notify-send "You are idle!" 
-#     # command to run when activity is detected after timeout has fired.
-#     # on-resume = notify-send "Welcome back!"
-# }
 general {
     lock_cmd = notify-send "lock!"
     unlock_cmd = notify-send "unlock!"      # same as above, but unlock
@@ -14,15 +7,16 @@ general {
 }
   
 listener {
-    timeout = 900 # 15min
+    timeout = 300 # 5mins
     # lock screen when timeout has passed
     on-timeout = hyprctl dispatch dpms off # turn off displays
     # on-resume = notify-send "Welcome back!"
 }
    
 listener {
-    timeout = 330 # 5.5mins and after 30secs of screen off
-    on-timeout = systemctl suspend # suspend pc
+    timeout = 600 # 10min  
+    # https://wiki.archlinux.org/title/Power_management/Suspend_and_hibernate
+    on-timeout = systemctl suspend # suspend/sleep pc
     # on-timeout = systemctl hibernate # suspend pc
     # on-resume = notify-send "Welcome back!"  
 }
