--- a/windowrules.conf
+++ b/windowrules.conf
@@ -29,3 +29,7 @@ windowrulev2 = fullscreen, $titleOW
 windowrulev2 = workspace 9, $titleOW
 windowrulev2 = noanim, $titleOW
 windowrulev2 = monitor HDMI-A-1, $titleOW
+
+
+# VLC
+windowrulev2 = idleinhibit always,class:(vlc), title:^(VLC media player)$
