Feat: grim -> grimblast, enable ignore dbus inhibit

--- a/autostart.conf
+++ b/autostart.conf
@@ -5,7 +5,7 @@ exec-once = hyprlock
 exec-once = hyprpaper
 
 # Auto starts gnome's auth agent 
-exec-once = bash $gnomeAuthAgent
+exec-once = $gnomeAuthAgent
 
 # Network manager
 exec-once = nm-applet --indicator
