--- a/binds.conf
+++ b/binds.conf
@@ -82,11 +82,6 @@ bind = $mainMod, S, exec, rofi -show drun -show-icons
 # Firefox Profile Switcher
 bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:~/.config/rofi/scripts/rofi-ffp.sh"
 
-# SS
-bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
-# TODO: change x,y and resolution based on active workspace
-bind = Ctrl, Print, exec, grim -g "0,0 1920x1080" - | swappy -f -
-
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
@@ -107,3 +102,21 @@ bind = ALT,F4, exec, ags -r "togglePowerMenu()"
 # Taskmgr
 bind = CTRL+SHIFT,ESCAPE, exec, gnome-system-monitor
 
+
+# Grimblast
+# Screenshots:
+# Print: Area
+# Ctrl+Print: Screen
+# #Super+Shift+p: Select area
+# #Super+Alt+p Current output
+# #Super+Ctrl+p All outputs
+# Optionally, customize slurp's appearance
+env = SLURP_ARGS, -d -b -B F050F022 -b 10101022 -c ff00ff
+env = GRIMBLAST_EDITOR, swappy
+# bind = SUPER, p, exec, grimblast save active
+# bind = , PRINT, exec, swappy -f $(grimblast --notify copysave area /tmp/$(date -Ins).png )
+bind = , PRINT, exec, nexus area
+bind = , CTRL+PRINT, exec, nexus screen
+# bind = , PRINT, exec, grimblast copysave area | swappy -f -
+# bind = SUPER ALT, p, exec, grimblast save output
+# bind = ,CTRL+PRINT, exec, swappy -f $(grimblast --notify copysave screen /tmp/$(date -Ins).png)
