--- a/hypridle.conf
+++ b/hypridle.conf
@@ -3,7 +3,7 @@ general {
     unlock_cmd = notify-send "unlock!"      # same as above, but unlock
     before_sleep_cmd = hyprlock  # command ran before sleep
     after_sleep_cmd = notify-send "Awake!"  # command ran after sleep
-    ignore_dbus_inhibit = false   
+    ignore_dbus_inhibit = true
 }
   
 listener {
