Fix: Ctrl+Print for active window, add ss.sh: help

--- a/binds.conf
+++ b/binds.conf
@@ -116,7 +116,7 @@ env = GRIMBLAST_EDITOR, swappy
 # bind = SUPER, p, exec, grimblast save active
 # bind = , PRINT, exec, swappy -f $(grimblast --notify copysave area /tmp/$(date -Ins).png )
 bind = , PRINT, exec, nexus area
-bind = , CTRL+PRINT, exec, nexus screen
+bind = CTRL,PRINT, exec, nexus active
 # bind = , PRINT, exec, grimblast copysave area | swappy -f -
 # bind = SUPER ALT, p, exec, grimblast save output
 # bind = ,CTRL+PRINT, exec, swappy -f $(grimblast --notify copysave screen /tmp/$(date -Ins).png)
