Feat: rofi-vscode

--- a/binds.conf
+++ b/binds.conf
@@ -81,7 +81,7 @@ bind = $mainMod, S, exec, rofi -show drun -show-icons
 #bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # Firefox Profile Switcher
 bind = $mainMod, U, exec, rofi -show "Profile Switcher" -modi "Profile Switcher:~/.config/rofi/scripts/rofi-ffp.sh"
-
+bind = $mainMod, O, exec, rofi -show "VSCode" -modi "VSCode:~/.config/rofi/scripts/rofi-vscode.sh"
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
