Feat(lockscreen): add time

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -24,6 +24,7 @@ source = ~/.config/hypr/autostart.conf
 #env = WLR_DRM_DEVICES,$HOME/.config/hypr/nvidia:$HOME/.config/hypr/intel
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -32,8 +33,8 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
-
+    follow_mouse = 0
+    
     touchpad {
         natural_scroll = yes
 	    scroll_factor = 0.3
@@ -48,7 +49,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 2
     gaps_out = 2
-    border_size = 4
+    border_size = 2
     resize_on_border = 1
     col.active_border = $primary_color rgba(F8B500ee) 45deg
     col.inactive_border = $inactive_bg
@@ -68,7 +69,7 @@ group {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 6
+    rounding = 4
     drop_shadow = false # disabled for perf
     # shadow_range = 4
     # shadow_render_power = 3
@@ -99,7 +100,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -115,7 +116,7 @@ device {
     accel_profile = flat
 }
 device {
-    name = telink-rakk-magan-mouse
+    name = rakk-magan-mouse
     sensitivity = 0
     accel_profile = flat
 }
@@ -125,3 +126,18 @@ misc {
     mouse_move_enables_dpms = false #prevents accidental wake up
 }
 
+#bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad
+        gesture_fingers = 3  # 3 or 4
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
