--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -15,20 +15,33 @@ background {
 
 label {
     monitor =
+    text = $TIME
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 45
+    font_family = Noto Sans
+
+    position = 0, 120
+    halign = center
+    valign = center
+}
+
+label {
+    monitor =
     text = Hi there, $USER
     color = rgba(200, 200, 200, 1.0)
     font_size = 25
     font_family = Noto Sans
 
-    position = 0, 80
+    position = 0, 50
     halign = center
     valign = center
 }
 
+
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 3
+    size = 180, 50
+    outline_thickness = 2
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
@@ -44,7 +57,7 @@ input-field {
     check_color = rgb(204, 136, 34)
     fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
+    fail_transition = 200 # transition time in ms between normal outer_color and fail_color
     capslock_color = -1
     numlock_color = -1
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
